Quartz sync: Jul 28, 2024, 9:57 PM

--- a/content/content/Random/רשימת הגדרות, אלגוריתמים, נוסחאות מסדי נתונים.md
+++ b/content/content/Random/רשימת הגדרות, אלגוריתמים, נוסחאות מסדי נתונים.md
@@ -1,3 +1,8 @@
+---
+cssclasses:
+  - rtl-class
+---
+
 ## דיאגרמות ER
 #### אלגוריתמים
 - מציאת חסם למספר ישויות בקבוצת קשרים. כמות ישויות בקבוצה אחת לעומת קבוצה שנייה.
@@ -318,13 +323,3 @@ $$
 > - לטרנזקציות אסור להשתמש בדברים מהעתיד, ז"א:
 > 	- אם טרנזקציה מנסה לקרוא, הוא בודקת את ה-WTS, אם הוא מהעתיד היא עושה אבורט וריסטראט עם TS חדש. אחרת, היא מעדכנת את ה-RTS להיות ה-TS שלה, שומרת עותק לוקאלי של מה שקראה וממשיכה.
 > 	- אם טרנזקציה מנסה לכתוב, היא בודקת את ה-RTS, אם הוא מהעתיד היא עושה אבורט וריסטארט עם TS חדש. אחרת, היא בודקת את ה-WTS, אם הוא מהעתיד, ולא משתמשים בחוק הכתיבה של תומאס, היא עושה אבורט וריסטראט עם TS חדש. אם ה-WTS הוא מהעתיד וכן משתמשים בחוק הכתיבה של תומאס, היא מבצעת כתיבה על העתק לוקאלי של האובייקט. לבסוף אם גם ה-RTS וגם ה-WTS לא מהעתיד, הכול סבבה והיא יכולה לכתוב ולעדכן את ה-WTS להיות ה-TS שלה. 
-
-
-
-
-
-
----
-
-> [!question]- משהו
-> משהו
