Quartz sync: Aug 5, 2024, 2:27 PM

--- a/content/content/Random/Poetry/06.md
+++ b/content/content/Random/Poetry/06.md
@@ -2,3 +2,27 @@
 cssclasses:
   - rtl-class
 ---
+**אֲרַכְּטִפּ**  
+
+אַלְטֶרְנָטִיבִי, מֵבִין, אוֹ חָכָם?  
+מְהֻרְהָר.  
+עַל עַצְמוֹ? אוֹ עַל כְּלוּם?  
+עִם מַחֲשָׁבוֹת... אֲמִתִּיּוֹת?  
+אִם כֵּן, יֶשׁ לִי מִלִּים... מַקּוֹרִיּוֹת, בִּשְׁבִילוֹ?  
+  
+שָׁלוֹם קָארֶה, שְׁלוֹם מִשְׁקָפַיִם עֲגֻלִּים  
+שָׁלוֹם סִיגַרְיָה בְּפֶה, וּשְׁנֵי פְרֶיְמִים קְטוּעִים  
+וְאוּלַי גַּם יוֹתֵר, וְאוּלַי גַּם פָּחוֹת  
+אֲבָל זֶה לְפָחוֹת,  
+רֵיאָלִיזְם עָרוּם וּמַגְעִיל שֶׁל עֲצָמָי  
+אָבְדַן אִישִׁיּוּת וְנִצָּחוֹן ה-"אֲנִי!".  
+  
+לֹא הַאֲנִי שֶׁתּוֹלֶה נִצָּחוֹן בְּנִגּוּן הָאָצִיל  
+שֶׁשּׁוֹמְעִים בְּמִנּוּן נָמוּךְ הָרָגִיל.  
+כֵּן הַאֲנִי שֶׁמַּפְעִיל בִּבְרָכָה,  
+שָׁעוֹן מְתַקְתֵּק שֶׁאוֹמֵר – שִׁכְחָה,  
+חָזוֹן בֵּין אִישִׁי מְלֻפָּף, מִסְתּוֹבֵב,  
+תִּמְרַח לִי מִשְׁחָה וְתִגַּע לִי בַּלֵּב.  
+  
+כְּמוֹ זוּג מִּשְׁקָפַיִם, זֶה מַעְגָּל מֻשְׁלָם,  
+אֲבָל אֲנִי וְהוּא כְּלוּאִים בּוֹ, (הַמַּבָּט שֶׁל קַו תַּחְתּוֹן), וְאוּלַי כָּל הָעוֹלָם.
