--- a/content/content/Random/Poetry/12.md
+++ b/content/content/Random/Poetry/12.md
@@ -2,3 +2,16 @@
 cssclasses:
   - rtl-class
 ---
+**לְשֶׁעָבַר, נְקֻדָּה לְבָנָה קִשְּׁטָה אֶת רֹאשִׁי. כַּיּוֹם, רַבּוֹת מְקַשְּׁטוֹת אֶת גּוּפִי.**
+
+דַּע לְךָ, שֶׁאֲנַחְנוּ בְּטוּחִים כָּאן. לָמָּה אַתָּה עוֹד רוֹעֵד כָּךְ? רְאֵה, לְמַעְלָה, הַשָּׁמַיִם בְּהִירִים, וּקְצָת לְמַטָּה, זֶה אַתָּה! הַקּוֹל הַזֶּה... הוּא שֶׁלְּךָ!
+
+"שִׁגָּעוֹן שֶׁל הַשְּׁנַיִם". אֲנִי וְאַתָּה הִשְׁתַּגַּעְנוּ, כִּי אָנוּ חוֹוִים חֲרָדָה מִדִּמְמַת הַקּוֹל שֶׁלִּי. לֹא הִשְׁתַּגַּעְנוּ בְּמַקְבִּיל, אֶלָּא בִּמְשֻׁתָּף, וּבְהִתְפַּתְּלוּת דּוּ-כִּוּוּנִית שֶׁלֹּא נָחָה רַק בִּתְחוּשַׁת אִשּׁוּר, אֶלָּא מַמְשִׁיכָה לְהַעֲצָמָה שֶׁל אוֹתָן תְּחוּשׁוֹת שֶׁאָנוּ מְנַסִּים לְהַחְבִּיא.
+
+אִם כָּךְ, מָה עָלֵינוּ לַעֲשׂוֹת?
+
+הַנְּקֻדָּה הַלְּבָנָה הַזֹּאת. הָעוֹלָם שֶׁלְּךָ. מָה לֹא הָיִיתִי נוֹתֵן כְּדֵי לְהִשְׁתַּתֵּף, לִצְעֹד אִתְּךָ בְּיַעַר שֶׁל פְּרָחִים. בֵּינְתַיִם, תּוּכַל לְהִצָּמֵד לְכָל הֲבָרָה, כָּל אַחַת שֶׁאַתָּה קוֹרֵא, כָּל אַחַת שֶׁאַתָּה שׁוֹמֵעַ. תַּעֲשֶׂה זֹאת הַרְחֵק מִמֵּמַד הַזְּמַן, הַרְחֵק מֵהַנְּטִיָּה הַטִּבְעִית שֶׁלְּךָ לְיַחַס אוֹתוֹ לְכָל דָּבָר. הֲפוּגָה רִגְעִית אִם כָּךְ, וּבוֹ בַּזְּמַן, בִּלְתִּי נִגְמֶרֶת. תֵּיבַת הַמּוּזִיקָה תַּמְשִׁיךְ לְתַקְתֵּק, וְכָל עוֹד אַתָּה קוֹרֵא אֶת הַמִּלִּים הַלָּלוּ, אַתָּה יָכוֹל לִהְיוֹת בָּטוּחַ שֶׁאֵינֶנִּי מַרְפָּה. עִם זֹאת, יַגִּיעַ הָרֶגַע שֶׁבּוֹ... תִּפָּטֵר מִמֶּנִּי, בֵּין אִם תִּרְצֶה בְּכָךְ וּבֵין אִם לֹא. הַנְּקֻדָּה הַלְּבָנָה שֶׁלְּךָ, הַיּוֹם הַזֶּה, הָעוֹלָם שֶׁלְּךָ.
+
+לֹא הָיָה זֶה... בַּיִת? בַּיִת שֶׁל פְּרָחִים?
+
+הַבֵּט לְמַעְלָה, הַשָּׁמַיִם עוֹדָם בְּהִירִים, לַמְרוֹת צִלְצוּלֵי הַסְּתָו, הַפַּעֲמוֹנִים הַחֲלוּדִים. הִגִּיעַ הַזְּמַן לַעֲבֹד. אוּלַי כְּדַאי שֶׁתַּקְשִׁיב לַמַּנְגִּינָה שֶׁמַּרְגִּיעָה אוֹתְךָ. מַנְגִּינָה נוֹסְטַלְגִּית, אֲבָל רֵיקָה. בַּיִת נָטוּשׁ. אֶעֱצֹם אֶת עֵינֶיךָ, וְתַקְשִׁיב.
