Quartz sync: Aug 5, 2024, 11:43 PM

--- a/content/content/Random/Poetry/21.md
+++ b/content/content/Random/Poetry/21.md
@@ -2,3 +2,16 @@
 cssclasses:
   - rtl-class
 ---
+אַל תַּרְאֵנִי אֶת יוֹפְךָ הָאֲמִתִּי  
+אַל תּוֹפִיעַ בַּחֲלוֹמִי  
+אַל תְּלַחֵךְ אֶת עִשְׂבִּי  
+אַל תִּשָּׂא אֶת מַשָּׂא גַּבִּי  
+
+וּכְשֶׁשַּׁבְתִּי לַיּוֹם שֶׁבּוֹ בָּחֲרוּ בִּי  
+עַל רִצְפַּת הַזְּכוּכִית הַשְּׁבוּרָה  
+נָפַלְתִּי, וּנְקֻדּוֹת אֲדֻמּוֹת כִּסּוּ אֶת גּוּפִי  
+נִצְנוּצִים וְדַרְכָּם אוֹר שְׁבוּר  
+עוֹר מְקֻטָּע  
+הַמְּגוֹנֵן עַל צוּרָתִי כִּרְצוּעוֹת קְטוּמוֹת  
+כְּמוֹ מַחְזִיקוֹת בְּכַפַּיִם עֲיֵפוּת  
+אֶת מַשָּׂאָם שֶׁל כָּל בְּנֵי הָאָדָם
