Quartz sync: Oct 17, 2024, 11:24 PM

--- a/content/content/Random/Poetry/03.md
+++ b/content/content/Random/Poetry/03.md
@@ -1,6 +1,7 @@
 ---
 cssclasses:
   - rtl-class
+  - space
 ---
 אֲנִי עֲדַיִן חוֹשֵׁב עַל סֵפֶר שֶׁקָּרָאתִי כְּשֶׁהָיִיתִי בֵּן 13, בְּמַחְשְׁבוֹת לֹא חֲטוּפוֹת.  
 וְלִצְעֹד בְּכָל יוֹם הַרְחֵק מִמָּה שֶׁהָיִיתִי כְּשֶׁקָּרָאתִי אֶת הַסֵּפֶר הַזֶּה,  
